# recipe-me

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build-android.sh  build-apk-android.sh  build-linux-desktop.sh  install_android.sh  local_recipes.sqlite  recipes.sqlite  reset_db.bash
api/: Cargo.toml
api/db/: schema.sql
api/recipes_db/: sample_data.sql  schema.sql
api/src/: auth.rs  constants.rs  data.rs  lib.rs  recipes.rs  sample.rs  user_actions.rs
api/src/db/: mod.rs  sample_data.rs
api/src/entities/: comment.rs  cousine_name.rs  cuisine_name.rs  diet_name.rs  ingredient_name.rs  ingredientname.rs  login_token.rs  meal_name.rs  mod.rs  prelude.rs  recipe.rs  recipe_collection.rs  recipe_collection_recipe.rs  recipe_cousine.rs  recipe_diet.rs  recipe_ingredient.rs  recipecousine.rs  recipeingredient.rs  recipetype.rs  source.rs  user.rs
api/user_db/: schema.sql
app/: Cargo.toml
app/assets/styling/: animations.css  hero.css  main.css  navbar.css  rating_static.css  recipe_preview.css
app/src/: constants.rs  main.rs  utils.rs
app/src/components/: filtered_recipes.rs  hero.rs  mod.rs  navbar.rs  rating_static.rs  recipe_preview.rs  select.rs
app/src/components/collection/: preview.rs
app/src/components/recipe/: comment.rs  comments.rs  mod.rs  preview.rs
app/src/server/: mod.rs
app/src/views/: blog.rs  download.rs  fallback.rs  home.rs  login.rs  mod.rs  signup.rs
app/src/views/account/: account.rs  account_recipes.rs  collections.rs  dashboard.rs  mod.rs  new_collection.rs  new_recipe.rs  recipes.rs
app/src/views/collection/: collection.rs
app/src/views/recipe/: mod.rs  recipe_page.rs  recipes.rs
backend/: Cargo.toml  path_links.json  recipes.sqlite
backend/recipe_hrefs/: bbc_food.json
backend/src/: main.rs
backend/src/db/: mod.rs  sample_data.rs
backend/src/entities/: ingredient_name.rs  recipe.rs  recipe_cuisine.rs  recipe_source.rs
backend/src/scraping/: all_recipes.rs  bbc_food.rs  generate.rs  mod.rs
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src/views/: blog.rs
local_api/: Cargo.toml  README.md
local_api/src/: constants.rs  lib.rs
local_api/src/db/: mod.rs
mobile/: Cargo.toml  local_schema.sql
mobile/assets/styling/: dialog.css  main.css  navbar.css  recipe_preview.css
mobile/assets/styling/themes/: midnight.css  pastel.css  white.css
mobile/src/: constants.rs  main.rs  utils.rs
mobile/src/components/: dialog.rs  filtered_recipes.rs  mod.rs  navbar.rs  rating_static.rs
mobile/src/components/collection/: collections.rs  filtered_local.rs  filtered_public.rs  mod.rs  preview.rs
mobile/src/components/recipe/: comment.rs  comments.rs  comp.rs  filtered_local.rs  filtered_public.rs  local.rs  mod.rs  new.rs  preview.rs  public.rs  recipe.rs
mobile/src/data/: mod.rs  partials.rs
mobile/src/entities/: recipe.rs  recipe_collection.rs  recipe_ingredient.rs  recipe_meal.rs  user.rs
mobile/src/server/: collection.rs  mod.rs  recipe.rs
mobile/src/views/: dashboard.rs  home.rs  mod.rs
mobile/src/views/collection/: collection.rs  collections.rs  local.rs  mod.rs  new_collection.rs  private.rs  public.rs
mobile/src/views/recipe/: local.rs  mod.rs  new.rs  new_recipe.rs  public.rs  recipe_page.rs  recipes.rs  view_local.rs
mobile/src/views/settings/: mod.rs  personalize.rs  premium.rs  view.rs
shared/: Cargo.toml
ui/: Cargo.toml
ui/assets/styling/: hero.css  main.css
ui/src/: hero.rs  lib.rs
ui/src/components/: mod.rs  navbar.rs  recipe_preview.rs
ui/src/recipe/: mod.rs  recipe_page.rs
ui/src/views/: app.rs  blog.rs  home.rs  mod.rs  recipe.rs  recipes.rs
web/src/: main.rs
web/src/views/: mod.rs  recipe.rs
