[workspace]
resolver = "2"
members = [
    "app",
    "api",
    "ui",
    "backend",
    "local_api",
    "mobile",
    "shared"
]

[workspace.dependencies]
dioxus = { version = "0.6.1"}
api = { path = "api" }
ui = { path = "ui" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
