[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8.4", optional = true }
api = { workspace = true }
serde_json = "1.0.140"
serde = "1.0.219"
web-sys = "0.3.77"
dioxus-toast = "0.6.0"
dioxus-sdk = { version = "0.6.0", features = ["storage"]}
dioxus-free-icons = { version = "0.9", features = ["lucide", "ionicons"] }
dioxus-motion = { version = "0.3.1", features = ["transitions"] }
num-traits = "0.2.19"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]
desktop = ["dioxus/desktop"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server", "dep:tokio", "dep:axum"]

[target.aarch64-linux-android]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android29-clang"

[target.armv7-linux-androideabi]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi29-clang"

[target.i686-linux-android]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android29-clang"

[target.x86_64-linux-android]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android29-clang"