[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sea-orm = "1.1.10"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
fantoccini = "0.21.5"
futures = "0.3.31"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
ollama-rs = "0.3.1"
