[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros"] }
api = { workspace = true }
dioxus-free-icons = { version = "0.9", features = ["lucide", "ionicons"] }
serde_json = "1.0.140"
serde = "1.0.219"
dioxus-sdk = { version = "0.6.0", features = ["storage"]}
enum-iterator = "2.1.0"
dioxus-motion = { version = "0.3.1", optional = true, default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["mobile"]
web = ["dioxus/web", "dioxus-motion/web", "dioxus-motion/transitions"]
desktop = ["dioxus/desktop", "dioxus-motion/desktop", "dioxus-motion/transitions"]
mobile = ["dioxus/mobile", "dioxus-motion/desktop", "dioxus-motion/transitions"]
server = ["dioxus/server"]

[target.aarch64-linux-android]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android29-clang"

[target.armv7-linux-androideabi]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi29-clang"

[target.i686-linux-android]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android29-clang"

[target.x86_64-linux-android]
linker = "/home/marvin/Android/Sdk/ndk/29.0.13113456/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android29-clang"
